@@ -162,6 +162,12 @@ Prints the list of cached implicit dependencies
 for all entries or the the specified entries.
 
 .TP
+--raw
+Prints a pretty-printed representation
+of the raw Python dictionary that holds
+build information about an entry.
+
+.TP
 -r, --readable
 Prints timestamps in a human-readable string,
 enclosed in single quotes.
